--- a/index.html
+++ b/index.html
@@ -29,12 +29,6 @@
                 <option value="Panama">Panamá</option>
             </select>
 
-            <label for="cultivo">Cultivo:</label>
-            <select id="cultivo">
-                <option value="default">Seleccione un Cultivo</option>
-                <!-- Añade opciones de cultivo aquí -->
-            </select>
-
             <button id="accion">Filtrar</button>
         </div>
 
@@ -42,7 +36,7 @@
             <!-- Las imágenes se cargarán aquí dinámicamente -->
         </div>
 
-        <button id="guardar">Guardar</button>
+        <button id="guardar" style="display: none;">Guardar</button>
     </div>
 
     <script src="script.js"></script>
