newCSV index.html

--- a/index.html
+++ b/index.html
@@ -9,34 +9,10 @@
 <body>
     <div class="container">
         <h1>Visualizador de Cultivos</h1>
-        <div>
-            <label for="usuario">Usuario:</label>
-            <select id="usuario">
-                <option value="Juan Carlos Toledo">Juan Carlos Toledo</option>
-                <option value="Ovidio del Cid">Ovidio del Cid</option>
-                <option value="Juan Pablo García">Juan Pablo García</option>
-            </select>
-
-            <label for="pais">País:</label>
-            <select id="pais">
-                <option value="default">Seleccione un País</option>
-                <option value="Colombia">Colombia</option>
-                <option value="CostaRica">Costa Rica</option>
-                <option value="ElSalvador">El Salvador</option>
-                <option value="Guatemala">Guatemala</option>
-                <option value="Honduras">Honduras</option>
-                <option value="Nicaragua">Nicaragua</option>
-                <option value="Panama">Panamá</option>
-            </select>
-
-            <button id="accion">Filtrar</button>
-        </div>
-
+        <!-- Contenedor para las imágenes y las áreas de texto -->
         <div id="img-container" class="img-container">
-            <!-- Las imágenes se cargarán aquí dinámicamente -->
+            <!-- Las imágenes y las áreas de texto se cargarán aquí dinámicamente -->
         </div>
-
-        <button id="guardar" style="display: none;">Guardar</button>
     </div>
 
     <script src="script.js"></script>
