--- a/index.html
+++ b/index.html
@@ -3,46 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visualizador de Cultivos</title>
+    <title>Evaluación de Imágenes</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Visualizador de Cultivos</h1>
-        <div>
-            <label for="usuario">Usuario:</label>
-            <select id="usuario">
-                <option value="Juan Carlos Toledo">Juan Carlos Toledo</option>
-                <option value="Ovidio del Cid">Ovidio del Cid</option>
-                <option value="Juan Pablo García">Juan Pablo García</option>
-            </select>
-
-            <label for="pais">País:</label>
-            <select id="pais">
-                <option value="default">Seleccione un País</option>
-                <option value="Colombia">Colombia</option>
-                <option value="CostaRica">Costa Rica</option>
-                <option value="ElSalvador">El Salvador</option>
-                <option value="Guatemala">Guatemala</option>
-                <option value="Honduras">Honduras</option>
-                <option value="Nicaragua">Nicaragua</option>
-                <option value="Panama">Panamá</option>
-            </select>
-
-            <label for="cultivo">Cultivo:</label>
-            <select id="cultivo">
-                <option value="default">Seleccione un Cultivo</option>
-                <!-- Añade opciones de cultivo aquí -->
-            </select>
-
-            <button id="accion">Filtrar</button>
-        </div>
+        <h1>Imágenes Recolectadas con IA</h1>
 
         <div id="img-container" class="img-container">
-            <!-- Las imágenes se cargarán aquí dinámicamente -->
+            <!-- Aquí se cargarán dinámicamente el nombre de la imagen, país, cultivo y la casilla para comentarios -->
         </div>
-
-        <button id="guardar">Guardar</button>
     </div>
 
     <script src="script.js"></script>
